Update Dockerfile for grpc_h264_endoscopy_tool_tracking application
- Changed the base image to use a specific version of the Clara Holoscan SDK with CUDA 13, enhancing compatibility and performance.
- Removed the GPU_TYPE argument to streamline the Dockerfile configuration.

Signed-off-by: Julien Jomier <jjomier@nvidia.com>

--- a/applications/distributed/grpc/grpc_h264_endoscopy_tool_tracking/cpp/Dockerfile
+++ b/applications/distributed/grpc/grpc_h264_endoscopy_tool_tracking/cpp/Dockerfile
@@ -18,10 +18,8 @@
 # Base image
 ############################################################
 
-ARG BASE_IMAGE
-ARG GPU_TYPE
-
-FROM ${BASE_IMAGE} as base
+ARG BASE_SDK_VERSION
+FROM nvcr.io/nvidia/clara-holoscan/holoscan:v${BASE_SDK_VERSION}-cuda13 as base
 
 ARG DEBIAN_FRONTEND=noninteractive
 
