Enable conditional Python subdirectory inclusion in CMake for gRPC applications
Updated CMakeLists.txt files for both grpc_endoscopy_tool_tracking and grpc_operators to include the Python subdirectory only if the HOLOHUB_BUILD_PYTHON option is enabled. This change ensures that Python bindings are only built when necessary, improving build efficiency for C++ projects.

Signed-off-by: Julien Jomier <jjomier@nvidia.com>

--- a/applications/distributed/grpc/grpc_endoscopy_tool_tracking/CMakeLists.txt
+++ b/applications/distributed/grpc/grpc_endoscopy_tool_tracking/CMakeLists.txt
@@ -35,4 +35,7 @@ if(HOLOHUB_DOWNLOAD_DATASETS)
 endif()
 
 add_subdirectory(cpp)
-add_subdirectory(python)
+
+if(HOLOHUB_BUILD_PYTHON)
+  add_subdirectory(python)
+endif()
