Enable conditional Python subdirectory for gRPC applications (#1204)
Updated CMakeLists.txt files for both grpc_endoscopy_tool_tracking and
grpc_operators to include the Python subdirectory only if the
HOLOHUB_BUILD_PYTHON option is enabled. This change ensures that Python
bindings are only built when necessary, improving build efficiency for
C++ projects.

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **Chores**
* Python components are now conditionally included in builds, allowing
builds without Python when not required.
* A component's Dockerfile was removed; the application now references a
shared Dockerfile in its metadata.
* Build inclusion logic for C++ vs Python components was restructured to
be mutually exclusive.
  * Metadata formatting adjusted and copyright year ranges updated.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Signed-off-by: Julien Jomier <jjomier@nvidia.com>
Signed-off-by: Bruce Hashemian <3968947+bhashemian@users.noreply.github.com>
Signed-off-by: Julien Jomier <219040+jjomier@users.noreply.github.com>
Co-authored-by: Bruce Hashemian <3968947+bhashemian@users.noreply.github.com>
Co-authored-by: greptile-apps[bot] <165735046+greptile-apps[bot]@users.noreply.github.com>
Signed-off-by: eagostini <eagostini@nvidia.com>

--- a/operators/grpc_operators/CMakeLists.txt
+++ b/operators/grpc_operators/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2024-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -17,4 +17,7 @@ cmake_minimum_required(VERSION 3.20)
 project(grpc_operators LANGUAGES NONE)
 
 add_subdirectory(cpp)
-add_subdirectory(python)
+
+if(HOLOHUB_BUILD_PYTHON)
+  add_subdirectory(python)
+endif()
