update apps to build for only one language at a time
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/applications/adv_networking_bench/CMakeLists.txt
+++ b/applications/adv_networking_bench/CMakeLists.txt
@@ -13,5 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-add_subdirectory(cpp)
-add_subdirectory(python)
+if(HOLOHUB_BUILD_PYTHON)
+  add_subdirectory(python)
+else()
+  add_subdirectory(cpp)
+endif()
