--- a/applications/endoscopy_out_of_body_detection/CMakeLists.txt
+++ b/applications/endoscopy_out_of_body_detection/CMakeLists.txt
@@ -36,7 +36,8 @@ if(HOLOHUB_DOWNLOAD_DATASETS)
 endif()
 
 # Add subdirectories
-add_subdirectory(cpp)
 if(HOLOHUB_BUILD_PYTHON)
   add_subdirectory(python)
+else()
+  add_subdirectory(cpp)
 endif()
