--- a/applications/cvcuda_basic/CMakeLists.txt
+++ b/applications/cvcuda_basic/CMakeLists.txt
@@ -34,5 +34,8 @@ if(HOLOHUB_DOWNLOAD_DATASETS)
   )
 endif()
 
-add_subdirectory(cpp)
-add_subdirectory(python)
+if(HOLOHUB_BUILD_PYTHON)
+  add_subdirectory(python)
+else()
+  add_subdirectory(cpp)
+endif()
