update the sub-apps
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/applications/distributed/grpc/grpc_endoscopy_tool_tracking/CMakeLists.txt
+++ b/applications/distributed/grpc/grpc_endoscopy_tool_tracking/CMakeLists.txt
@@ -34,8 +34,8 @@ if(HOLOHUB_DOWNLOAD_DATASETS)
   )
 endif()
 
-add_subdirectory(cpp)
-
 if(HOLOHUB_BUILD_PYTHON)
   add_subdirectory(python)
+else()
+  add_subdirectory(cpp)
 endif()
