--- a/applications/distributed/ucx/ucx_endoscopy_tool_tracking/CMakeLists.txt
+++ b/applications/distributed/ucx/ucx_endoscopy_tool_tracking/CMakeLists.txt
@@ -48,5 +48,8 @@ if(BUILD_TESTING)
   set_tests_properties(endoscopy_engine_generation PROPERTIES FIXTURES_SETUP endoscopy_engine_generation_fixture)
 endif()
 
-add_subdirectory(cpp)
-add_subdirectory(python)
+if(HOLOHUB_BUILD_PYTHON)
+  add_subdirectory(python)
+else()
+  add_subdirectory(cpp)
+endif()
