--- a/applications/distributed/ucx/ucx_h264_endoscopy_tool_tracking/CMakeLists.txt
+++ b/applications/distributed/ucx/ucx_h264_endoscopy_tool_tracking/CMakeLists.txt
@@ -16,5 +16,8 @@
 cmake_minimum_required(VERSION 3.20)
 project(h264_endoscopy_tool_tracking_distributed_apps LANGUAGES NONE)
 
-add_subdirectory(cpp)
-add_subdirectory(python)
+if(HOLOHUB_BUILD_PYTHON)
+  add_subdirectory(python)
+else()
+  add_subdirectory(cpp)
+endif()
