--- a/applications/slang/slang_gamma_correction/CMakeLists.txt
+++ b/applications/slang/slang_gamma_correction/CMakeLists.txt
@@ -13,5 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-add_subdirectory(cpp)
-add_subdirectory(python)
+if(HOLOHUB_BUILD_PYTHON)
+  add_subdirectory(python)
+else()
+  add_subdirectory(cpp)
+endif()
