exclude building cpp app when using python lang
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/applications/video_streaming/video_streaming_client/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_client/CMakeLists.txt
@@ -30,10 +30,9 @@ if(HOLOHUB_DOWNLOAD_DATASETS)
   )
 endif()
 
-# Add C++ subdirectory
-add_subdirectory(cpp)
 
-# Add Python subdirectory
 if(HOLOHUB_BUILD_PYTHON)
   add_subdirectory(python)
+else()
+  add_subdirectory(cpp)
 endif()
