--- a/applications/cvcuda_basic/CMakeLists.txt
+++ b/applications/cvcuda_basic/CMakeLists.txt
@@ -34,8 +34,10 @@ if(HOLOHUB_DOWNLOAD_DATASETS)
   )
 endif()
 
+if(HOLOHUB_BUILD_CPP)
+  add_subdirectory(cpp)
+endif()
+
 if(HOLOHUB_BUILD_PYTHON)
   add_subdirectory(python)
-else()
-  add_subdirectory(cpp)
 endif()
