--- a/applications/distributed/grpc/grpc_h264_endoscopy_tool_tracking/CMakeLists.txt
+++ b/applications/distributed/grpc/grpc_h264_endoscopy_tool_tracking/CMakeLists.txt
@@ -16,4 +16,6 @@
 cmake_minimum_required(VERSION 3.20)
 project(grpc_h264_endoscopy_tool_tracking_apps LANGUAGES NONE)
 
-add_subdirectory(cpp)
+if(HOLOHUB_BUILD_CPP)
+  add_subdirectory(cpp)
+endif()
