--- a/applications/endoscopy_out_of_body_detection/CMakeLists.txt
+++ b/applications/endoscopy_out_of_body_detection/CMakeLists.txt
@@ -36,8 +36,10 @@ if(HOLOHUB_DOWNLOAD_DATASETS)
 endif()
 
 # Add subdirectories
+if(HOLOHUB_BUILD_CPP)
+  add_subdirectory(cpp)
+endif()
+
 if(HOLOHUB_BUILD_PYTHON)
   add_subdirectory(python)
-else()
-  add_subdirectory(cpp)
 endif()
