--- a/applications/holoscan_ros2/pubsub/CMakeLists.txt
+++ b/applications/holoscan_ros2/pubsub/CMakeLists.txt
@@ -17,8 +17,10 @@
 cmake_minimum_required(VERSION 3.20)
 project(pubsub LANGUAGES NONE)
 
+if(HOLOHUB_BUILD_CPP)
+  add_subdirectory(cpp)
+endif()
+
 if(HOLOHUB_BUILD_PYTHON)
   add_subdirectory(python)
-else()
-  add_subdirectory(cpp)
 endif()
