--- a/applications/nvidia_video_codec/nvc_encode_decode/CMakeLists.txt
+++ b/applications/nvidia_video_codec/nvc_encode_decode/CMakeLists.txt
@@ -15,8 +15,10 @@
 
 cmake_minimum_required(VERSION 3.20)
 
+if(HOLOHUB_BUILD_CPP)
+  add_subdirectory(cpp)
+endif()
+
 if(HOLOHUB_BUILD_PYTHON)
   add_subdirectory(python)
-else()
-  add_subdirectory(cpp)
 endif()
