--- a/applications/stereo_vision/CMakeLists.txt
+++ b/applications/stereo_vision/CMakeLists.txt
@@ -15,4 +15,7 @@
 
 cmake_minimum_required(VERSION 3.20)
 project(stereo_vision_app)
-add_subdirectory(cpp)
+
+if(HOLOHUB_BUILD_CPP)
+  add_subdirectory(cpp)
+endif()
