--- a/applications/vpi_stereo/CMakeLists.txt
+++ b/applications/vpi_stereo/CMakeLists.txt
@@ -16,4 +16,6 @@
 cmake_minimum_required(VERSION 3.20)
 project(vpi_stereo_app)
 
-add_subdirectory(cpp)
+if(HOLOHUB_BUILD_CPP)
+  add_subdirectory(cpp)
+endif()
