--- a/applications/holoscan_ros2/pubsub/CMakeLists.txt
+++ b/applications/holoscan_ros2/pubsub/CMakeLists.txt
@@ -17,10 +17,10 @@
 cmake_minimum_required(VERSION 3.20)
 project(pubsub LANGUAGES NONE)
 
-# Add the cpp subdirectory
-add_subdirectory(cpp)
+if(HOLOHUB_BUILD_CPP)
+  add_subdirectory(cpp)
+endif()
 
-# Conditionally add Python subdirectory if Python builds are enabled
 if(HOLOHUB_BUILD_PYTHON)
   add_subdirectory(python)
 endif()
