--- a/applications/simple_radar_pipeline/CMakeLists.txt
+++ b/applications/simple_radar_pipeline/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2023-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,5 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-add_subdirectory(cpp)
-
+# If Python is enabled,
+#  - skip building the C++ application
+#  - Python application doesn't have anything to build.
+if(NOT HOLOHUB_BUILD_PYTHON)
+  add_subdirectory(cpp)
+endif()
