--- a/applications/deltacast_transmitter/CMakeLists.txt
+++ b/applications/deltacast_transmitter/CMakeLists.txt
@@ -16,7 +16,9 @@
 cmake_minimum_required(VERSION 3.20)
 project(deltacast_transmitter_apps LANGUAGES NONE)
 
-add_subdirectory(cpp)
+if(HOLOHUB_BUILD_CPP)
+  add_subdirectory(cpp)
+endif()
 
 if(HOLOHUB_BUILD_PYTHON)
   add_subdirectory(python)
