--- a/applications/distributed/ucx/ucx_endoscopy_tool_tracking/CMakeLists.txt
+++ b/applications/distributed/ucx/ucx_endoscopy_tool_tracking/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2024-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -48,5 +48,10 @@ if(BUILD_TESTING)
   set_tests_properties(endoscopy_engine_generation PROPERTIES FIXTURES_SETUP endoscopy_engine_generation_fixture)
 endif()
 
-add_subdirectory(cpp)
-add_subdirectory(python)
+if(HOLOHUB_BUILD_CPP)
+  add_subdirectory(cpp)
+endif()
+
+if(HOLOHUB_BUILD_PYTHON)
+  add_subdirectory(python)
+endif()
