fix missing reference to video_streaming_client
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/applications/video_streaming/video_streaming_client/cpp/streaming_client_demo.yaml
+++ b/applications/video_streaming/video_streaming_client/cpp/streaming_client_demo.yaml
@@ -71,7 +71,7 @@ simple_text_serializer:
   max_elements: 500
 
 # Streaming client settings
-streaming_client:
+video_streaming_client:
   # Video/stream parameters
   width: 640  # Match V4L2 source resolution
   height: 480
