--- a/applications/video_streaming/video_streaming_server/cpp/video_streaming_server_demo.yaml
+++ b/applications/video_streaming/video_streaming_server/cpp/video_streaming_server_demo.yaml
@@ -22,7 +22,7 @@ application:
   log_level: INFO
 
 # Streaming server settings - standalone mode
-streaming_server:
+video_streaming_server:
   # Video/stream parameters
   width: 854
   height: 480
