--- a/operators/video_streaming/video_streaming_server/video_streaming_server-config.cmake.in
+++ b/operators/video_streaming/video_streaming_server/video_streaming_server-config.cmake.in
@@ -1,5 +1,5 @@
-# streaming_server-config.cmake.in
-# Config file for the streaming_server package
+# video_streaming_server-config.cmake.in
+# Config file for the video_streaming_server package
 
 @PACKAGE_INIT@
 
@@ -13,7 +13,7 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}")
 find_package(StreamingServer REQUIRED)
 
 # Include the targets file
-include("${CMAKE_CURRENT_LIST_DIR}/streaming_server-targets.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/video_streaming_server-targets.cmake")
 
 # Check that the targets exist
-check_required_components(streaming_server) 
+check_required_components(video_streaming_server) 
