--- a/applications/video_streaming/video_streaming_server/cpp/video_streaming_server_demo.yaml
+++ b/applications/video_streaming/video_streaming_server/cpp/video_streaming_server_demo.yaml
@@ -39,7 +39,7 @@ video_streaming_server:
   allocator: !ref "allocator"
 
 # Upstream operator configuration (receives frames from clients)
-# Note: width, height, fps are inherited from streaming_server resource
+# Note: width, height, fps are inherited from video_streaming_server resource
 # Uncomment below to override resource defaults per-operator
 upstream_op: {}
   # width: 854
@@ -47,7 +47,7 @@ upstream_op: {}
   # fps: 30
 
 # Downstream operator configuration (sends frames to clients)
-# Note: width, height, fps are inherited from streaming_server resource
+# Note: width, height, fps are inherited from video_streaming_server resource
 # Uncomment below to override resource defaults per-operator
 downstream_op: {}
   # width: 854
