add build guard for python bindings
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/operators/nvidia_video_codec/nv_video_decoder/CMakeLists.txt
+++ b/operators/nvidia_video_codec/nv_video_decoder/CMakeLists.txt
@@ -44,4 +44,6 @@ target_include_directories(nv_video_decoder PUBLIC
   ${NVC_SDK_PATH}/NvDecoder
 )
 
-add_subdirectory(python)
+if(HOLOHUB_BUILD_PYTHON)
+  add_subdirectory(python)
+endif()
