--- a/operators/nvidia_video_codec/nv_video_encoder/CMakeLists.txt
+++ b/operators/nvidia_video_codec/nv_video_encoder/CMakeLists.txt
@@ -45,4 +45,6 @@ target_include_directories(nv_video_encoder PUBLIC
   ${NVC_SDK_PATH}/NvEncoder
 )
 
-add_subdirectory(python)
+if(HOLOHUB_BUILD_PYTHON)
+  add_subdirectory(python)
+endif()
