--- a/applications/video_streaming/Dockerfile
+++ b/applications/video_streaming/Dockerfile
@@ -16,8 +16,8 @@
 ############################################################
 # Base image
 ############################################################
-
-FROM nvcr.io/nvidia/clara-holoscan/holoscan:v3.5.0-dgpu
+ARG BASE_IMAGE=nvcr.io/nvidia/clara-holoscan/holoscan:v3.5.0-dgpu
+FROM ${BASE_IMAGE}
 
 # Install system dependencies including updated OpenSSL and testing tools
 RUN apt-get update && apt-get install -y \
