exclude video streaming build from CI
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/.github/workflows/check_cli.yml
+++ b/.github/workflows/check_cli.yml
@@ -48,4 +48,4 @@ jobs:
       - name: Run CMake tests
         run: |
           cd build
-          ctest --verbose
+          ctest --verbose -E "video_streaming"
