--- a/.github/workflows/check_cli.yml
+++ b/.github/workflows/check_cli.yml
@@ -48,4 +48,5 @@ jobs:
       - name: Run CMake tests
         run: |
           cd build
+          # Exclude video_streaming tests due to external dependencies
           ctest --verbose -E "video_streaming"
