guard video streaming tests
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/.github/workflows/check_cli.yml
+++ b/.github/workflows/check_cli.yml
@@ -48,5 +48,4 @@ jobs:
       - name: Run CMake tests
         run: |
           cd build
-          # Exclude video_streaming tests due to external dependencies
-          ctest --verbose -E "video_streaming"
+          ctest --verbose
